<?xml version="1.0"?>
<package format="3">

  <name>hyvio</name>
  <version>0.0.1</version>
  <description>Lightweight Accurate and Robust VIO based on MSCKF</description>

  <maintainer email="zhouwei@anqingxinkai.com">zhouwei</maintainer>

  <license>TODO</license>

  <author email="zhouwei@anqingxinkai.com">zhouwei</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>std_srvs</depend>

  <depend>libpcl-all-dev</depend>
  <depend>suitesparse</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>